--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/netlify": "^2.2.3",
-    "astro": "^2.5.0"
+    "astro": "^2.5.0",
+    "svelte": "^3.59.1"
   }
 }
